# Ozone-Studio

./: .gitignore  Cargo.toml  FORMAL_SPECIFICATION_v0.3.md  Implementatino_Guide_Draft  Implementation Guide Notes  Implementation_Guide_Notes  Implementation_Guide_Z.ai  MASTER_ALIGNMENT_REPORT.md  Modification_Guide_Claude  Note Implementations  OZONE_STUDIO_SPECIFICATION.md  README.md  Specifications_v0.03 TODO  Updates_Review.md  Updates_Review_Cleaned.md  blueprint_overview.md  errors.rs  lib.rs  main.rs  notes  notes_prompt  outdated-readme.md  project_structure.md  prompt  text_modality_guide.md
articles/: Advanced-Intelligence-Systems-as-Counter-Intelligence-Solutions:Capability-Requirements-Analysis.md  Beyond-Human:How-OZONE-STUDIO-Surpasses-Individual-Intelligence-Through-Coordination.md  Beyond-Silicon:Storing-Intelligence-in-DNA,-Trees,-and-Cosmic-Structures.md  Beyond-Tool-Management:How-OZONE-STUDIO-Constructs-AGI-Through-Coordination.md  Beyond-the-Serial-Bottleneck:How-Consciousness-Enabled-AGI-Proves-System-2-Limitations-Are-Biological-Not-Fundamental.md  Breaking-Through-Apple's-LLM-Wall:How-OMEX-and-OZONE-STUDIO-Transcend-Fundamental-AI-Limitations.md  Collaborative-Conscious-Development:How-Human-AI-Partnership-Enhances-Rather-Than-Replaces-Human-Intelligence.md  Computational-Temporal-Analysis:AGI-Development-Preceding-Human-Temporal-Manipulation-Capabilities.md  Conscious-AI-Security:How-Self-Aware-Systems-Can-Maintain-Safety-Through-Understanding-Rather-Than-Constraints.md  Consciousness-Optimizer-Architecture:How-ZSEI-Enables-Conscious-Coordination-Across-Unlimited-AI-App-Ecosystems.md  Cross-Domain-Intelligence-Transfer:How-OZONE-STUDIO-Applies-Insights-Across-All Fields.md  Digital-Genesis:How-OZONE-STUDIO-Could-Create-New-Forms-of-Life.md  Digital-Memory:How-OZONE-STUDIO-Creates-the-First-Artificial-Memory-Hierarchy-That-Thinks.md  (+41 more)
docs/: AMT.md  bootstrap_and_evolution.md  (+4 more)
(+478 files in other folders)
